tests/types/result/errors/test_err_err_without_argument.sushi
# Tests error for Err() without error argument
# EXPECT_ERROR_CODE: CE2039

enum MyError:
    Error

fn test_func() i32 | MyError:
    return Result.Err(StdError.Error)

fn main() i32:
    return Result.Ok(0)
